# hw07-Group26

./: .buildinfo  .gitignore  EDA.ipynb  Makefile  README.html  README.md  _config.yml  _toc.yml  conf.py  contribution_statement.html  contribution_statement.md  environment.yml  envremove.sh  envsetup.sh  envupdate.sh  genindex.html  html_hub.sh  hw07-description.html  logistic_reg.ipynb  main.html  main.ipynb  objects.inv  prepare.ipynb  requirements.txt  run_codes.sh  search.html  searchindex.js  setup.cfg
_sources/: README.md  main.ipynb
code/: prepare.ipynb  two-populations-analysis.ipynb
codes/: Decision Tree and Random Forest.html  Decision Tree and Random Forest.ipynb  EDA.html  Model Selection.ipynb  data_prepare.html  data_prepare.ipynb  data_visual.html  data_visual.ipynb  decision_tree_and_random_forest.html  decision_tree_and_random_forest.ipynb  final_model_selection.html  final_model_selection.ipynb  logistic_reg.html  logistic_reg.ipynb  metrics_df.pkl  prepare.html  prepare.ipynb  two-populations-analysis.html  two-populations-analysis.ipynb  two_populations_analysis.html  two_populations_analysis.ipynb
data/: test.csv  train.csv  val.csv
diagnosis/: README.html  README.md  setup.cfg  twosample.py
diagnosis.egg-info/: PKG-INFO  SOURCES.txt
diagnosis/diagnosis/: __init__.py  modelmake.py  prepare.py
diagnosis/diagnosis.egg-info/: PKG-INFO  SOURCES.txt
diagnosis/diagnosis/tests/: test_logistic_reg.py  test_prepare.py  test_twosample.py
diagnosis/tests/: test_logistic_reg.py  test_modelmake.py  test_twosample.py
models/: dt_model.sav  (+1 more)
(+35 files in other folders)
